Sculpt Mode: Line Project tool messing up the mesh #114830

Closed
opened 2023-11-14 10:52:26 +01:00 by TheRedWaxPolice · 2 comments

System Information
Operating system: Win 10

Blender Version
Broken: blender-4.1.0-alpha+main.7e8557e6c64e-windows.amd64-release
Worked: Last week's builds were fine...

Short description of error
The Line Project tool is not working properly, it's messing up the mesh + lots of display glitches...

Exact steps for others to reproduce the error
File/New/SCulpting
Choose the Line Project tool and use it

See:

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-4.1.0-alpha+main.7e8557e6c64e-windows.amd64-release Worked: Last week's builds were fine... **Short description of error** The Line Project tool is not working properly, it's messing up the mesh + lots of display glitches... **Exact steps for others to reproduce the error** File/New/SCulpting Choose the Line Project tool and use it **See:** <video controls="" src="https://media.discordapp.net/attachments/587761956526751784/1173919074653310996/blender_f6um92Q6n2.mp4"></video>
TheRedWaxPolice added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-11-14 10:52:26 +01:00

Thank you for submitting your report, @TheRedWaxPolice. I can confirm the issue.

Caused by 44b79af4fc

Thank you for submitting your report, @TheRedWaxPolice. I can confirm the issue. Caused by 44b79af4fcad1f88959c7effc8b00c2c58d58606
@HooglyBoogly ^
Hans Goudey self-assigned this 2023-11-14 23:19:05 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-11-16 10:16:58 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-16 10:32:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114830
No description provided.