Fix #114830: Sculpt line project inverted

Caused by 44b79af4fcad1f88959c7effc8b00c2c58d58606