source/blender/editors/sculpt_paint/paint_mask.cc
@@ -1530,7 +1530,7 @@ static void project_line_gesture_apply_task(SculptGestureContext *sgcontext, PBV
     const float *co = SCULPT_vertex_co_get(sgcontext->ss, vd.vertex);
     SCULPT_vertex_normal_get(sgcontext->ss, vd.vertex, vertex_normal);
 
-    if (sculpt_gesture_is_effected(sgcontext, co, vertex_normal)) {
+    if (!sculpt_gesture_is_effected(sgcontext, co, vertex_normal)) {
       continue;
     }
 
